# MyMLLearning

Advanced RAG with Vector Databases and Retrievers/Week 2/: gradio_bot_youtube.py
Other/Banking/: 11292025.txt
Pytorch Deep Learning/C1 Fundamental/W1 Simple NN, Tensor Practice/: C1_M1_Lab_1_simple_nn.ipynb  C1_M1_Lab_3_tensors.ipynb
Pytorch Deep Learning/C1 Fundamental/W2 MNIST/Assignment/: .gitignore
Pytorch Deep Learning/C1 Fundamental/W3 Dataset, DataLoader, Transformation, Error Handling/Assignment/: .gitignore
Pytorch Deep Learning/C1 Fundamental/W3 Dataset, DataLoader, Transformation, Error Handling/Lab1 Working with Dataset and Data loader/: .gitignore
Pytorch Deep Learning/C1 Fundamental/W4 Debugging, Robust CNN/Assignment - Overcoming Overfitting Building a Robust CNN/: .gitignore  C1M4_Assignment.ipynb
Pytorch Deep Learning/C1/W1/: C1_M1_Lab_2_activation_functions.ipynb
Pytorch Deep Learning/C1/W2/: .gitignore  C1_M2_Lab_1_mnist_classifier.ipynb
TensorFlow Developer/Course 1 Introduction to TensorFlow/: pyproject.toml
TensorFlow Developer/Practice TensorFlow/: pyproject.toml
TensorFlow Developer/Practice TensorFlow/C1W1/: C1W1_Assignment Housing Price.ipynb  TestTensorFlow.py
TensorFlow Developer/Practice TensorFlow/C1W2/: Housing_Price_withcallback.py  MNIST.py
TensorFlow Developer/Practice TensorFlow/C1W3/: ImprovingAccuracy.py
TensorFlow Developer/Practice TensorFlow/C2/: W1.ipynb
Vector Database For Rag/Module 1/: ChromaSimilarity.py  Reading.odt
Vector Database For Rag/Module 2/: ChromaAllTypeSearch.py
(+28 files in other folders)
