[project]
name = "week-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pooch>=1.8.2",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
]
